--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- responsivity -->
+
+    <link rel="stylesheet" href="css/responsive.css" />
+    <!-- owl css -->
+    <link rel="stylesheet" href="css/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl/owl.theme.default.min.css" />
     <title>Netflix Clone</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <h2>NETFLIX</h2>
+        <div class="logo"></div>
         <nav>
           <a href="#">Início</a>
           <a href="#">Séries</a>
@@ -18,5 +24,70 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="filme-principal">
+        <div class="container">
+          <div class="title"></div>
+          <p class="description">
+            Um político inescrupuloso não mede esforços para conquistar o poder
+            nos EUA neste drama vencedor do Emmy e do Globo de Ouro. Assista
+            agora a nova temporada de House of Cards que está imperdível.
+          </p>
+          <div class="buttons">
+            <button role="button" class="button">
+              <i class="fas fa-play"></i>
+              ASSISTIR AGORA
+            </button>
+            <button role="button" class="button">
+              <i class="fas fa-info-circle"></i>
+              MAIS INFORMAÇÕES
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <div class="carousel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box-filme" src="img/mini1.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini2.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini3.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini4.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini5.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini6.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini7.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini8.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini9.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini10.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/d7302b1bf6.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
